# QuantumZ

./: .gitignore  ACCEPTANCE_MATRIX.md  AGENTS.md  App.xaml  App.xaml.cs  IMPLEMENTATION_PLAN.md  MauiProgram.cs  QuantumZ.csproj  README.md  architecture.md
Core/Interfaces/: IAIClient.cs  IAIIntegrationService.cs  IActivityLogger.cs  IAudioRingBuffer.cs  IAudioVisualizer.cs  IDebugLogger.cs  IDialogService.cs  IFluxAssetService.cs  ILlamaLocalManager.cs  ILlmProvider.cs  ILocalSetupService.cs  ILogSummaryService.cs  IMcpOrchestrator.cs  IMemoryService.cs  IModelRegistry.cs  INativeRuntimeService.cs  IPipelineStateService.cs  IProvider.cs  IProviderRouter.cs  ISettingsService.cs  ISpeechStateService.cs  ISttEngine.cs  ISttProvider.cs  IThermalMonitor.cs  ITtsEngine.cs  ITtsProvider.cs  IVadProvider.cs  IWakeWordProvider.cs
Core/Models/: ActivityLoggerModels.cs  AudioRingBuffer.cs  DebugEvent.cs  LogLevel.cs  ModelCatalogModels.cs  NativeRuntimeModels.cs  PipelineState.cs  ProviderModels.cs  ThermalModels.cs
Core/Models/Settings/: SettingsModels.cs
Infrastructure/Configuration/: ServiceRegistration.cs
Infrastructure/Native/: LlamaNative.cs  PiperNative.cs  WhisperNative.cs
Infrastructure/Services/: AIIntegrationService.cs  ActivityAnalyzerService.cs  AudioVisualizerService.cs  DebugLoggerService.cs  FluxAssetService.cs  LlamaAIClient.cs  LlamaLocalManager.cs  LocalAiTtsProvider.cs  LocalBinaryManager.cs  LocalSetupService.cs  LogSummaryService.cs  McpOrchestrator.cs  ModelCatalogService.cs  ModelRegistry.cs  NativeRuntimeService.cs  ObsidianMemoryService.cs  OnnxWakeWordProvider.cs  PipelineStateService.cs  ProviderRouter.cs  RemoteSttEngine.cs  RmsVadProvider.cs  RmsWakeWordProvider.cs  SettingsService.cs  SpeechStateService.cs  SqliteLogBufferService.cs  TtsService.cs  WakeWordProviderFactory.cs  WhisperLocalSttProvider.cs  WhisperModelDownloader.cs
Infrastructure/Utilities/: PcmToWavConverter.cs
Native/: CMakeLists.txt  README.md  quantumz_llama_wrapper.cpp  quantumz_whisper_wrapper.cpp
Pages/: DebugOverlayPage.xaml  DebugOverlayPage.xaml.cs  MainAssistantPage.xaml  MainAssistantPage.xaml.cs  MemoryPage.xaml  MemoryPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  SetupPage.xaml  SetupPage.xaml.cs
Resources/Styles/: Colors.xaml  Styles.xaml
UI/Converters/: BoolToListenTextConverter.cs  HexToColorConverter.cs  IntGreaterThanZeroConverter.cs  InvertedBoolConverter.cs  ListToBulletConverter.cs  StringNotEmptyConverter.cs
ViewModels/: AssistantAnimationViewModel.cs  BaseViewModel.cs  DebugViewModel.cs  MainAssistantViewModel.cs  MemoryViewModel.cs  RelayCommand.cs  SettingsViewModel.cs  SetupViewModel.cs
docs/: assistant-fixes.md
